--- a/style.css
+++ b/style.css
@@ -5,12 +5,24 @@ body {
 }
 
 h1 {
+
+box-shadow:
+    12px 12px 17px 0px darkred,
+    -10px -10px 10px 0px red,
+    10px 10px 19px 0px gold;
+  padding: 10px;
+  margin: 50px;
+  border-style: ridge;
   font-size: 55px;
-  margin: 15px;
+  font-family: cursive;
+  border-radius
+  border-color: white;
+  border-width: thin;
 }
 
 p {
-  padding: 3px;
+  padding: 15px;
+  margin: 100px;
   border: 5px solid white;
   color: gold;
   font-size: 35px;
