--- a/style.css
+++ b/style.css
@@ -7,23 +7,33 @@ body {
 h1 {
 
 box-shadow:
-    12px 12px 17px 0px darkred,
-    -10px -10px 10px 0px red,
-    10px 10px 19px 0px gold;
+    12px 12px 17px 0px gold,
+    -10px -10px 10px 0px gold,
+    10px 10px 19px 0px white;
   padding: 10px;
   margin: 50px;
   border-style: ridge;
   font-size: 55px;
-  font-family: cursive;
-  border-radius
-  border-color: white;
-  border-width: thin;
+  border-color: gray;
+  border-width: 10px;
 }
 
-p {
+h2 {
+  box-shadow:
+  7px 7px 9px 0px gold,
+  -7px -7px 9px 0px gold,
+  7px 7px 9px 0px white;
+  padding: 17px;
+  margin: 100px;
+  border-style: ridge;
+  border-width: 10px;
+  border-color: gray;
+}
+
+.about {
   padding: 15px;
   margin: 100px;
-  border: 5px solid white;
+  border: 5px solid grey;
   color: gold;
   font-size: 35px;
   border-color: white;
